[project]
name = "amcat4"
version = "4.1.0"
description = "API for AmCAT4 Text Analysis"
readme = "README.md"
authors = [
    { name = "Wouter van Atteveldt", email = "wouter@vanatteveldt.com" }
]
license = "MIT"
keywords = ["API", "text"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]",
    "elasticsearch>=8.6,<8.7",
    "python-multipart",
    "python-dotenv",
    "requests",
    "authlib",
    "pydantic[email]",
    "pydantic-settings",
    "typing-extensions",
    "uvicorn",
    "Pillow",
    "python-magic",
    "class-doc",
    "jsonpath-ng",
    "async-lru",
    "aioboto3",
    "aiobotocore",
    "types-aiobotocore[s3]",
    "cryptography",
]

[project.scripts]
amcat4 = "amcat4.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest",
    "pytest-httpx",
    "mypy",
    "flake8",
    "responses",
    "pre-commit",
    "types-requests",
    "pytest-anyio",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools.packages.find]
include = ["amcat4*"]  # This captures amcat4 and amcat4.api
